@@ -1,1 +1,1 @@
-<p>Oops, an error occured! Our engineers were notified. Please be patient as we are working on it.</p>
+<p>出错了！工程师正在修复，请稍后再次访问！</p>
